--- a/style.css
+++ b/style.css
@@ -202,7 +202,8 @@ input {
   color: #333;
 }
 
-input[type="text"] {
+/*입력창 오류방지 위해 name으로 변경*/
+input[type="name"] {  
   background-image: url('https://img.icons8.com/ios-filled/50/000000/user.png');
 }
 
